@@ -12,6 +12,7 @@ export(addDominant)
 export(addLDA)
 export(addMediation)
 export(addNMDS)
+export(addNMF)
 export(addNotContaminantQC)
 export(addPerSampleDominantFeatures)
 export(addPerSampleDominantTaxa)
@@ -55,6 +56,7 @@ export(getExperimentCrossCorrelation)
 export(getLDA)
 export(getMediation)
 export(getNMDS)
+export(getNMF)
 export(getPrevalence)
 export(getPrevalent)
 export(getPrevalentAbundance)
@@ -152,6 +154,7 @@ exportMethods(addDominant)
 exportMethods(addHierarchyTree)
 exportMethods(addLDA)
 exportMethods(addMediation)
+exportMethods(addNMF)
 exportMethods(addNotContaminantQC)
 exportMethods(addPerSampleDominantFeatures)
 exportMethods(addPerSampleDominantTaxa)
@@ -192,6 +195,7 @@ exportMethods(getHierarchyTree)
 exportMethods(getLDA)
 exportMethods(getMediation)
 exportMethods(getNMDS)
+exportMethods(getNMF)
 exportMethods(getPrevalence)
 exportMethods(getPrevalent)
 exportMethods(getPrevalentAbundance)
